change homepage bg, style why bb section

--- a/_includes/css/_footer.scss
+++ b/_includes/css/_footer.scss
@@ -1,6 +1,9 @@
 footer {
   background: $gray4;
-  padding: 75px 100px;
+  .row {
+    max-width: 1500px;
+    margin: 0 auto;
+  }
 
   ul {
     list-style-type: none;
