--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <!-- Footer -->
     <footer>
-        <div class="text-left">
+        <div class="text-left row">
             <ul>
                 <li><a href="/">About BombBomb</a></li>
                 <li><a href="/">API</a></li>
