--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
                         <a class="page-scroll boxedlink" target="_blank" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
                     </li>
                     <li class="desk">
-                        <a class="page-scroll" href="#">Login</a>
+                        <a class="page-scroll" target="_blank" href="https://app.bombbomb.com/app/">Login</a>
                     </li>
                     <li class="menu-btn"><div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
                         <ul>
