--- a/_includes/css/_index.scss
+++ b/_includes/css/_index.scss
@@ -23,16 +23,45 @@
 #getting_started, #why_bombbomb, #libraries {
   width: 100%;
   padding: 75px;
+
+  .row {
+    max-width: 1500px;
+    margin: 0 auto;
+  }
 }
 
 
 
 #why_bombbomb {
   background: $white;
+  div.row {
+    position: relative;
+  }
+  div.row div.text {
+    width: 60%;
+    float: right;
+    text-align: left;
+  }
+  div.row div.bg {
+    background: url('img/bomb.png') no-repeat left 50px;
+    background-size: auto 120%;
+    width: 40%;
+    height: calc(100% + 150px);
+    position: absolute;
+    left: 0;
+    top: -75px;
+  }
   h2 {
     color: $orange;
     text-transform: none;
     @include medium;
+  }
+  p {
+    color: $gray4;
+    padding-right: 20px;
+    &:last-child{
+      margin: 0;
+    }
   }
 }
 #getting_started {
@@ -108,5 +137,6 @@
   img {
     width: 80%;
     margin: 0 10%;
+    opacity: 0.7;
   }
 }
