--- a/_includes/css/_responsive.scss
+++ b/_includes/css/_responsive.scss
@@ -74,3 +74,12 @@
     width: calc(100% - 25px);
   }
 }
+
+@media screen and (max-width: 500px) {
+  #getting_started, #why_bombbomb, #libraries {
+    padding: 15px;
+  }
+  .navbar .menu-btn ul {
+    background: #e1e1e1;
+  }
+}
