--- a/_layouts/blogPost.html
+++ b/_layouts/blogPost.html
@@ -1,21 +1,12 @@
 ---
 layout: default
 ---
-<div class="download-section">
-    <div class="container">
 
-        <div class="col-lg-offset-1 col-sm-offset-0 col-md-6 col-sm-12">
-
-            <h1>{{page.title}}</h1>
-
-            <div>By {{page.author}}</div>
-
-        </div>
-
-    </div>
-</div>
 <div class="row">
     <div class="col-lg-offset-3 col-sm-offset-0 col-md-6 col-sm-12">
+        <h1>{{page.title}}</h1>
+
+        <cite>By {{page.author}}</cite>
         {{ content}}
     </div>
 </div>
