--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,72 +1,74 @@
- <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+<!-- Navigation -->
+<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
 
-            <div class="navbar-header">
-                <a class="navbar-brand page-scroll" href="/">
-                    <img src="/img/devlogo.png" alt="BombBomb Developers">
-                </a>
-            </div>
+    <div class="navbar-header">
+        <a class="navbar-brand page-scroll" href="/">
+            <img src="/img/devlogo.png" alt="BombBomb Developers">
+        </a>
+    </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="navbar-right ">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="/"></a>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="navbar-right ">
+        <ul class="nav navbar-nav">
+            <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+            <li class="hidden">
+                <a href="/"></a>
+            </li>
+            <li class="desk">
+                <a class="page-scroll boxedlink" target="_blank" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create
+                    account</a>
+            </li>
+            <li class="desk">
+                <a class="page-scroll" target="_blank" href="https://app.bombbomb.com/app/">Login</a>
+            </li>
+            <li class="menu-btn">
+                <div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
+                <ul>
+
+
+                    <li class="mobile">
+                        <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
                     </li>
-                    <li class="desk">
-                        <a class="page-scroll boxedlink" target="_blank" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
+                    <li class="mobile">
+                        <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Login</a><br><br>
                     </li>
-                    <li class="desk">
-                        <a class="page-scroll" target="_blank" href="https://app.bombbomb.com/app/">Login</a>
+                    <li>
+                        <a class="page-scroll" href="/api">API</a>
                     </li>
-                    <li class="menu-btn"><div id="nav-icon3"><span></span><span></span><span></span><span></span></div>
-                        <ul>
-
-
-                           <li class="mobile">
-                                <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
-                            </li>
-                           <li class="mobile">
-                                <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Login</a><br><br>
-                            </li>
-                           <li>
-                                <a class="page-scroll" href="/api">API</a>
-                            </li>                            <li>
-                                <a class="page-scroll" href="/auth">Auth</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="/blog">Blog</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="/libs">Libraries</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" href="/webhooks">Webhooks</a>
-                            </li>
-<br>
-
-                            <li>
-                                <a class="page-scroll" target="_blank" href="http://www.bombbomb.com">About BombBomb</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" target="_blank" href="http://bombbomb.com/workwithus">Jobs</a>
-                            </li>
-                            <li>
-                                <a class="page-scroll" target="_blank" href="http://support.bombbomb.com">Support</a>
-                            </li>
-
-                        </ul>
-
-
+                    <li>
+                        <a class="page-scroll" href="/LegacyAPI">Legacy API</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="/auth">Auth</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/blog">Blog</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/libs">Libraries</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/webhooks">Webhooks</a>
+                    </li>
+                    <br>
 
-
-
-
-
+                    <li>
+                        <a class="page-scroll" target="_blank" href="http://www.bombbomb.com">About BombBomb</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" target="_blank" href="http://bombbomb.com/workwithus">Jobs</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" target="_blank" href="http://support.bombbomb.com">Support</a>
+                    </li>
 
                 </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-    </nav>
+
+
+            </li>
+
+
+        </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+</nav>
