--- a/_layouts/blogPost.html
+++ b/_layouts/blogPost.html
@@ -6,7 +6,7 @@ layout: default
     <div class="col-lg-offset-3 col-sm-offset-0 col-md-6 col-sm-12">
         <h1>{{page.title}}</h1>
 
-        <cite>By {{page.author}}</cite>
+        <cite>By {{page.author}}, {{page.date | date: '%B %-d, %Y' }}</cite>
         {{ content}}
     </div>
 </div>
