--- a/_includes/css/_index.scss
+++ b/_includes/css/_index.scss
@@ -57,7 +57,7 @@
     @include medium;
   }
   p {
-    color: $gray4;
+    color: $almost-black;
     padding-right: 20px;
     &:last-child{
       margin: 0;
