--- a/_includes/css/_standard.scss
+++ b/_includes/css/_standard.scss
@@ -15,7 +15,7 @@
     margin: 150px 0 15px;
   }
   p {
-    color: $gray4;
+    color: $almost-black;
   }
 
   .library {
@@ -83,7 +83,7 @@
 
   cite {
     display: block;
-    color: $gray4;
+    color: $almost-black;
     margin: 0 0 50px;
   }
 }
