--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -2,6 +2,14 @@ body {
   background: #FFFFFF;
   position: relative; }
 
+::-moz-selection {
+  background: #0099CC;
+  color: white; }
+
+::selection {
+  background: #0099CC;
+  color: white; }
+
 .navbar {
   text-transform: none;
   padding: 25px 135px;
@@ -43,7 +51,7 @@ body {
     line-height: 2;
     margin-right: -250px;
     width: 250px; }
-    .navbar .menu-btn ul a {
+    .navbar .menu-btn ul a:visited, .navbar .menu-btn ul a, .navbar .menu-btn ul a:active {
       color: #2C2E2F; }
 
 #nav-icon3 {
@@ -130,7 +138,7 @@ footer {
 .intro .intro-body {
   position: relative; }
   .intro .intro-body .brand-heading {
-    color: #FFC400;
+    color: #FFCC00;
     text-transform: none;
     font-weight: 600;
     font-family: 'Avenir LT W01_85 Heavy1475544', 'Avenir', Helvetica, Arial, sans-serif; }
@@ -179,7 +187,7 @@ footer {
       margin: 0; }
 
 #getting_started {
-  background: #4DBFBB; }
+  background: #4DC2BE; }
   #getting_started h2 {
     text-transform: none;
     font-weight: 500;
@@ -250,7 +258,7 @@ footer {
   padding: 50px 150px;
   margin: 0; }
 .standard h1 {
-  color: #0096C9;
+  color: #0099CC;
   text-transform: none;
   font-weight: 500;
   font-family: 'Avenir LT W01_65 Medium1475532', 'Avenir', Helvetica, Arial, sans-serif;
@@ -272,7 +280,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #4DBFBB;
+    background: #4DC2BE;
     text-align: center;
     padding: 35px; }
     .standard .library .packageInfo ul {
@@ -289,7 +297,7 @@ footer {
   .standard .library:hover .packageInfo {
     display: block; }
 .standard .missing {
-  background: #4DBFBB;
+  background: #4DC2BE;
   width: 100%;
   margin: 0; }
   .standard .missing h2 {
@@ -384,9 +392,3 @@ footer {
     background: #e1e1e1; } }
 
 /*# sourceMappingURL=style.css.map */
-
-
-
-.webhookItemHeader {
-  font-size:xx-large;
-}
