Legacy API index.html Line 16-17 Changed the 2018 verbiage for get_started.html line 48 Added link for the OAuth Dance

--- a/_includes/get_started.html
+++ b/_includes/get_started.html
@@ -45,7 +45,7 @@
                 <img src="img/steps/three.png" alt="step one">
                 <h3><span>Step three</span> Do the<br> OAuth Dance</h3>
                 <div>
-                <p><a>Give your users a link</a> that has them approve your app for access, then write down their token.</p>
+                <p><a href="https://developer.bombbomb.com/auth/" target="_blank">Give your users a link</a> that has them approve your app for access, then write down their token.</p>
                 </div>
             </div>
 
