update links/favicon to https

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="https://bombbomb.com/workwithus/">Jobs</a></li>
                 <li><a href="/libs">Libraries</a></li>
-                <li><a href="http://support.bombbomb.com/?_ga=1.86711313.825334326.1482173465">Support</a></li>
+                <li><a href="https://support.bombbomb.com/?_ga=1.86711313.825334326.1482173465">Support</a></li>
                 <li><a href="/webhooks">Webhooks</a></li>
             </ul>
         </div>
