--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-    <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+    <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: https://bootswatch.com/flatly/ -->
     <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
 
     <!-- Custom Fonts -->
@@ -15,7 +15,7 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/scripts.js"></script>
 
-    <link rel="shortcut icon" href="http://www.bombbomb.com/wp-content/uploads/2015/07/favicon.png">
+    <link rel="shortcut icon" href="https://www.bombbomb.com/wp-content/uploads/2015/07/favicon.png">
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
