--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
                 <a href="/"></a>
             </li>
             <li class="desk">
-                <a class="page-scroll boxedlink" target="_blank" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create
+                <a class="page-scroll boxedlink" target="_blank" href="https://bombbomb.com/trial/?promo=DEVELOPER">Create
                     account</a>
             </li>
             <li class="desk">
@@ -27,10 +27,10 @@
 
 
                     <li class="mobile">
-                        <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
+                        <a class="page-scroll" href="https://bombbomb.com/trial/?promo=DEVELOPER">Create account</a>
                     </li>
                     <li class="mobile">
-                        <a class="page-scroll" href="http://bombbomb.com/trial/?promo=DEVELOPER">Login</a><br><br>
+                        <a class="page-scroll" href="https://bombbomb.com/trial/?promo=DEVELOPER">Login</a><br><br>
                     </li>
                     <li>
                         <a class="page-scroll" href="/api">API</a>
@@ -53,13 +53,13 @@
                     <br>
 
                     <li>
-                        <a class="page-scroll" target="_blank" href="http://www.bombbomb.com">About BombBomb</a>
+                        <a class="page-scroll" target="_blank" href="https://www.bombbomb.com">About BombBomb</a>
                     </li>
                     <li>
-                        <a class="page-scroll" target="_blank" href="http://bombbomb.com/workwithus">Jobs</a>
+                        <a class="page-scroll" target="_blank" href="https://bombbomb.com/workwithus">Jobs</a>
                     </li>
                     <li>
-                        <a class="page-scroll" target="_blank" href="http://support.bombbomb.com">Support</a>
+                        <a class="page-scroll" target="_blank" href="https://support.bombbomb.com">Support</a>
                     </li>
 
                 </ul>
