--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/scripts.js"></script>
 
-    <link rel="shortcut icon" href="https://www.bombbomb.com/wp-content/uploads/2015/07/favicon.png">
+    <link rel="shortcut icon" href="/img/favicon.png">
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
